chore: emit updates on create app (#11)
